--- a/index2.html
+++ b/index2.html
@@ -5,18 +5,18 @@
  All rights reserved
  -->
 <head>
-<title>Andy B Goode - Vintage Rock and Roll, 1940s, Rat Pack Singer, 1970s</title>
+<title>Andy B Goode - Vintage Singer (Rock and Roll, Rat Pack Singer, 1940s/1950s/1960s/1970s)</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="w3.css">
 
 <meta http-equiv="Cache-Control" content="no-cache" />
 <meta http-equiv="Pragma" content="no-cache" />
 <meta http-equiv="expires" content="0" />
-<meta name="short" content="Andy B Goode - Vintage Rock and Roll, 1940s, Rat Pack Singer, 1970s, Entertainer"/>
-<meta name="description" content="Andy B Goode - Vintage Rock and Roll, 1940s, Rat Pack Singer, 1970s based in Tamworth, Staffordshire, England">
+<meta name="short" content="Andy B Goode - Vintage Singer (Rock and Roll, Rat Pack Singer, 1940s/1950s/1960s/1970s), Entertainer"/>
+<meta name="description" content="Andy B Goode - Vintage Singer (Rock and Roll, Rat Pack Singer, 1940s/1950s/1960s/1970s) based in Tamworth, Staffordshire, England">
 <meta name="author" content="Andrew Britton">
 <meta charset="UTF-8">
-<meta name="keywords" content="AndyBGoode,Andy B Goode,Singer,Vocalist,Tamworth,1940s,1950s,1960s,1970s, Rat Pack,Rock n Roll,Rock and Roll,Entertainment,Vintage">
+<meta name="keywords" content="AndyBGoode,Andy B Goode,Singer,Vocalist,Tamworth,1940s,1950s,1960s,1970s,Rat Pack,Rock n Roll,Rock and Roll,Entertainment,Vintage">
 
 <link rel="apple-touch-icon" sizes="57x57" href="/images/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="/images/apple-icon-60x60.png">
@@ -47,7 +47,7 @@
   <meta itemprop="image" content="http://www.andybgoode.com/images/andybgoode.png" />
   <meta itemprop="url" content="http://www.AndyBGoode.com" />
   <meta itemprop="isFamilyFriendly" content="True" />
-  <meta itemprop="genre" content="Rock n Roll" />
+  <meta itemprop="genre" content="Rat Pack" />
   <meta itemprop="keywords" content="Andy B Goode, AndyBGoode, Rock n Roll, Rock and Roll, Rat Pack, Singer, Entertainer, Tamworth, Staffordshire, England, UK, Vintage, Classic, 1940s, 1950s, 1960s, 1970s" />
 </div>
 <script src="misc/instafeed.min.js"></script>
@@ -67,23 +67,32 @@
 </div>
 
 
+<div class="w3-container w3-black w3-border-bottom w3-border-black">
+  <h1>Andy B Goode, Vintage Singer</h1> 
+<!--  <p>Andy B Goode - Vintage Singer</p> -->
+</div>
 
-<div class="w3-container w3-black">
-  <h1>Andy B Goode</h1> 
-  <p>Andy B Goode - Vintage Singer</p>
+
+
+<div class="w3-container w3-black w3-border-bottom w3-border-black">
 <div class="w3-cell-row">
- <img src="photos/andybgoode0001-thumb.jpg" class="w3-image w3-round" alt="1950s/60s Rock and Roll Entertainer"> 
- <img src="photos/thejays0005-thumb.jpg" class="w3-image w3-round" alt="1960s Rat Pack, Swing Singer"> 
- <img src="photos/thejays0004-thumb.jpg" class="w3-image w3-round" alt="1940s and Wartime Vocalist"> 
+ <img src="photos/andybgoode0001-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="1950s/60s Rock and Roll Entertainer"> 
+ <img src="photos/thejays0005-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="1960s Rat Pack, Swing Singer"> 
+ <img src="photos/thejays0004-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="1940s and Wartime Vocalist"> 
+ <img src="photos/andybgoode0004-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxxx"> 
+ <img src="photos/andybgoode0010-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxxx"> 
+ <img src="photos/andybgoode0019-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxxx"> 
 </div>
 </div>
+
+
 
 <div class="w3-row-padding">
   <div class="w3-third w3-black">
     <h2>Rock and Roll</h2>
     <p>"Shake Rattle and Roll"</p>
 <ul>
-<li>Solo 1950s/1960s Rock and Roll Sets</li>
+<li>1950s/1960s Rock and Roll Sets</li>
 <li>Dynamic Rock n Roll Vocalist</li>
 <li>Jive the night away to the energetic sounds those classic Rock n Roll songs</li>
 <li>Outfit: Fun 1950s 'Teddy boy' style complete with Blue Suede shoes</li>
@@ -93,7 +102,7 @@
 </ul>
   </div>
 
-  <div class="w3-third w3-grey">
+  <div class="w3-third w3-black"> <!-- w3-grey -->
     <h2>Rat Pack</h2>
     <p>"When I Fall in Love it will be Forever"</p>
 <ul>
@@ -101,21 +110,21 @@
 <li>Smooth love songs by a heartfelt Crooner</li>
 <li>Outfit: DJ, Sinatra-style</li>
 <li>xx xx xx xxx xxx </li>
-<li>Epic hits by: Frank Sinatra, Dean Martin, Nat King Cole, Tony Bennett, Bobby Darin, Andy Williams, Michael Buble and many more</li>
+<li>Epic hits by: Frank Sinatra, Dean Martin, Nat King Cole, Tony Bennett, Bobby Darin, Andy Williams, Michael Buble, Harry Connick Jr and many more</li>
 <li><a href="songlist.html">Song List</a></li>
 </ul>
   </div>
 
-  <div class="w3-third w3-dark-grey">
+  <div class="w3-third w3-black"> <!-- w3-dark-grey -->
     <h2>1940s</h2>
     <p>"Goodnight Sweetheart"</p>
 <ul>
-<li>Solo 1940s and Wartime Sets</li>
+<li>1940s and Wartime Sets</li>
 <li>Crooner classics</li>
 <li>Wartime songs</li>
 <li>Sing along tunes</li>
 <li>Outfit: 1940s style</li>
-<li>Epic hits by: Nat King Cole, Bing Crosby, Al Bowlly, Vera Lynn, Cliff Edwards, James Baskett, Flanagan and Allen, Vaughn Monroe, George Formby, Frank Sinatra, Michael Buble, Harry Connick Jr and many more.</li>
+<li>Epic hits by: Nat King Cole, Bing Crosby, Al Bowlly, Vera Lynn, Cliff Edwards, James Baskett, Flanagan and Allen, Vaughn Monroe, George Formby, Frank Sinatra, Michael Buble and many more.</li>
 <li><a href="songlist.html">Song List</a></li>
 </ul>
   </div>
@@ -124,8 +133,23 @@
 
 
 
+
+<div class="w3-container w3-black w3-border-bottom w3-border-black">
+<div class="w3-cell-row">
+ <img src="photos/andybgoode0001-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="1950s/60s Rock and Roll Entertainer"> 
+ <img src="photos/thejays0005-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="1960s Rat Pack, Swing Singer"> 
+ <img src="photos/thejays0004-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="1940s and Wartime Vocalist"> 
+ <img src="photos/andybgoode0004-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxxx"> 
+ <img src="photos/andybgoode0010-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxxx"> 
+ <img src="photos/andybgoode0019-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxxx"> 
+</div>
+</div>
+
+
+
+
 <div class="w3-row-padding">
-  <div class="w3-third w3-grey">
+  <div class="w3-third w3-black"> <!-- w3-grey -->
     <h2>Quality Vintage Entertainment</h2>
     <p>Professional 1940s to 1970s  Vintage Entertainer, Swing Singer. Let me enliven your events with some fun vintage 'Rock n Roll' music. Get your feet moving on the dance floor to some vintage 'Rock n Roll' classics.</p>
 <ul>
@@ -139,7 +163,7 @@
 </ul>
   </div>
 
-  <div class="w3-third w3-dark-grey">
+  <div class="w3-third w3-black"> <!-- w3-dark-grey -->
     <h2>A Vintage Christmas</h2>
 <p>Rock and Roll and Crooning Christmas.</p> 
 <ul>
@@ -175,6 +199,21 @@ Perfect for:</p>
 
 
 
+
+<div class="w3-container w3-black w3-border-bottom w3-border-black">
+<div class="w3-cell-row">
+ <img src="photos/andybgoode0001-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="1950s/60s Rock and Roll Entertainer"> 
+ <img src="photos/thejays0005-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="1960s Rat Pack, Swing Singer"> 
+ <img src="photos/thejays0004-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="1940s and Wartime Vocalist"> 
+ <img src="photos/andybgoode0004-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxxx"> 
+ <img src="photos/andybgoode0010-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxxx"> 
+ <img src="photos/andybgoode0019-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxxx"> 
+</div>
+</div>
+
+
+
+
 <div class="w3-container w3-black">
   <h1>Upcoming Events</h1>
   <p>I am delighted to announce some public gigs where vintage classics will be the order of the day. 
@@ -195,13 +234,25 @@ Some are solo gigs and others with <a href="http://www.TheJaysVintage.com">'The 
 
 
 
+<div class="w3-container w3-black w3-border-bottom w3-border-black">
+<div class="w3-cell-row">
+ <img src="photos/andybgoode0001-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="1950s/60s Rock and Roll Entertainer"> 
+ <img src="photos/thejays0005-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="1960s Rat Pack, Swing Singer"> 
+ <img src="photos/thejays0004-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="1940s and Wartime Vocalist"> 
+ <img src="photos/andybgoode0004-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxxx"> 
+ <img src="photos/andybgoode0010-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxxx"> 
+ <img src="photos/andybgoode0019-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxxx"> 
+</div>
+</div>
+
+
+
 <div class="w3-container w3-black">
   <h1>Social Media</h1> 
   <p>Check out my <a href="https://www.facebook.com/AndyBGoode">Facebook</a>, <a href="https://www.instagram.com/andybgoodevocalist">Instagram</a> or even <a href="http://www.twitter.com/AndyBGoode">Twitter</a>.</p>
   <p>RECENT INSTAGRAM POSTS (from 'Andy B Goode' and 'The Jays Vintage')</p>
   <div id="instafeed"></div>
 </div>
-
 
 
 
@@ -222,13 +273,13 @@ Some are solo gigs and others with <a href="http://www.TheJaysVintage.com">'The 
 </ul>
   </div>
 
-  <div class="w3-third w3-grey">
+  <div class="w3-third w3-black"> <!-- w3-grey -->
     <h2>The Jays Vintage</h2>
     <p>Vintage 1940s Vocal Harmony Group</p>
     <p><a href='http://www.TheJaysVintage.com'>The Jays Vintage Website</a></p>
   </div>
 
-  <div class="w3-third w3-dark-grey">
+  <div class="w3-third w3-black"> <!-- w3-dark-grey -->
     <h2>Jude Britton</h2>
     <p>Acoustic Singer Songwriter</p>
     <p>Having shared a stage with him, I can whole heartly recommend this talented chap.</p>
@@ -251,8 +302,10 @@ Some are solo gigs and others with <a href="http://www.TheJaysVintage.com">'The 
 
 
 </div>
-<script type="text/javascript">
+<script>
+//width was 260
  var changebleLimit = 12;
+ var imageWidth = 200;
  var ajb1 = '3153218281.1677ed0.';
  var ajb2 = 'a7ca15e521d244b69f85ef6fa1a54ba4';
  var ajb3 = ajb1+ajb2;
@@ -262,7 +315,7 @@ Some are solo gigs and others with <a href="http://www.TheJaysVintage.com">'The 
         accessToken: ajb3,
         limit: 12,
         resolution: 'low_resolution',
-        template: '<a href="{{link}}"> <img width="260" src="{{image}}" alt="({{location}}) {{caption}}"/></a>'
+        template: '<a href="{{link}}"> <img width="'+imageWidth+'" src="{{image}}" alt="({{location}}) {{caption}}"/></a>'
     });
     userFeed.run();
 </script>
