test response banners

--- a/index2.html
+++ b/index2.html
@@ -79,9 +79,9 @@
  <img src="photos/andybgoode0001-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="1950s/60s Rock and Roll Entertainer"> 
  <img src="photos/thejays0005-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="1960s Rat Pack, Swing Singer"> 
  <img src="photos/thejays0004-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="1940s and Wartime Vocalist"> 
- <img src="photos/andybgoode0004-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxxx"> 
- <img src="photos/andybgoode0010-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxxx"> 
- <img src="photos/andybgoode0019-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxxx"> 
+ <img src="photos/andybgoode0004-thumb.jpg" class="w3-image w3-image-abg-4 w3-round" alt="xxxx"> 
+ <img src="photos/andybgoode0010-thumb.jpg" class="w3-image w3-image-abg-5 w3-round" alt="xxxx"> 
+ <img src="photos/andybgoode0019-thumb.jpg" class="w3-image w3-image-abg-6 w3-round" alt="xxxx"> 
 </div>
 </div>
 
@@ -139,9 +139,9 @@
  <img src="photos/andybgoode0001-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="1950s/60s Rock and Roll Entertainer"> 
  <img src="photos/thejays0005-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="1960s Rat Pack, Swing Singer"> 
  <img src="photos/thejays0004-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="1940s and Wartime Vocalist"> 
- <img src="photos/andybgoode0004-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxxx"> 
- <img src="photos/andybgoode0010-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxxx"> 
- <img src="photos/andybgoode0019-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxxx"> 
+ <img src="photos/andybgoode0004-thumb.jpg" class="w3-image w3-image-abg-4 w3-round" alt="xxxx"> 
+ <img src="photos/andybgoode0010-thumb.jpg" class="w3-image w3-image-abg-5 w3-round" alt="xxxx"> 
+ <img src="photos/andybgoode0019-thumb.jpg" class="w3-image w3-image-abg-6 w3-round" alt="xxxx"> 
 </div>
 </div>
 
@@ -205,9 +205,9 @@ Perfect for:</p>
  <img src="photos/andybgoode0001-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="1950s/60s Rock and Roll Entertainer"> 
  <img src="photos/thejays0005-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="1960s Rat Pack, Swing Singer"> 
  <img src="photos/thejays0004-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="1940s and Wartime Vocalist"> 
- <img src="photos/andybgoode0004-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxxx"> 
- <img src="photos/andybgoode0010-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxxx"> 
- <img src="photos/andybgoode0019-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxxx"> 
+ <img src="photos/andybgoode0004-thumb.jpg" class="w3-image w3-image-abg-4 w3-round" alt="xxxx"> 
+ <img src="photos/andybgoode0010-thumb.jpg" class="w3-image w3-image-abg-5 w3-round" alt="xxxx"> 
+ <img src="photos/andybgoode0019-thumb.jpg" class="w3-image w3-image-abg-6 w3-round" alt="xxxx"> 
 </div>
 </div>
 
@@ -239,9 +239,9 @@ Some are solo gigs and others with <a href="http://www.TheJaysVintage.com">'The 
  <img src="photos/andybgoode0001-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="1950s/60s Rock and Roll Entertainer"> 
  <img src="photos/thejays0005-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="1960s Rat Pack, Swing Singer"> 
  <img src="photos/thejays0004-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="1940s and Wartime Vocalist"> 
- <img src="photos/andybgoode0004-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxxx"> 
- <img src="photos/andybgoode0010-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxxx"> 
- <img src="photos/andybgoode0019-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxxx"> 
+ <img src="photos/andybgoode0004-thumb.jpg" class="w3-image w3-image-abg-4 w3-round" alt="xxxx"> 
+ <img src="photos/andybgoode0010-thumb.jpg" class="w3-image w3-image-abg-5 w3-round" alt="xxxx"> 
+ <img src="photos/andybgoode0019-thumb.jpg" class="w3-image w3-image-abg-6 w3-round" alt="xxxx">  
 </div>
 </div>
 
