--- a/index2.html
+++ b/index2.html
@@ -54,7 +54,7 @@
 <div class="w3-container w3-black">
 
 
-
+<!--
 <div class="w3-bar w3-black">
   <a href="#" class="w3-bar-item w3-button w3-border w3-mobile w3-mobile">Home</a>
   <a href="news.html" class="w3-bar-item w3-button w3-border w3-mobile">News</a>
@@ -65,10 +65,39 @@
   <a href="testimonials.html" class="w3-bar-item w3-button w3-border w3-mobile">Testimonials</a>
   <a href="#contact" class="w3-bar-item w3-button w3-border w3-mobile">Contact</a>
 </div>
+-->
+<div class="w3-bar w3-black">
+  <a href="javascript:void(0)" class="w3-bar-item w3-button w3-hide-large w3-hide-medium" onclick="menuFunction()">&#9776;</a>
+<!--  <a href="#" class="w3-bar-item w3-button w3-border">Home</a> -->
+  <a href="#contact" class="w3-bar-item w3-button w3-border">Contact</a>
+  <a href="photos.html" class="w3-bar-item w3-button w3-border">Photos</a>
+  <a href="videos.html" class="w3-bar-item w3-button w3-border">Videos</a>
+  <a href="music.html" class="w3-bar-item w3-button w3-border w3-hide-small">Music</a>
+  <a href="songlist.html" class="w3-bar-item w3-button w3-border w3-hide-small">Songs</a>
+  <a href="news.html" class="w3-bar-item w3-button w3-border w3-hide-small">News</a>
+  <a href="testimonials.html" class="w3-bar-item w3-button w3-border w3-hide-small">Testimonials</a>
+</div>
+<div id="topMenu" class="w3-bar-block w3-border w3-hide w3-hide-large w3-hide-medium w3-black">
+  <a href="music.html" class="w3-bar-item w3-button w3-border">Music</a>
+  <a href="songlist.html" class="w3-bar-item w3-button w3-border">Songs</a>
+  <a href="news.html" class="w3-bar-item w3-button w3-border">News</a>
+  <a href="testimonials.html" class="w3-bar-item w3-button w3-border">Testimonials</a>
+</div>
+<script>
+function menuFunction() {
+  var x = document.getElementById("topMenu");
+  if (x.className.indexOf("w3-show") == -1) {
+    x.className += " w3-show";
+  } else { 
+    x.className = x.className.replace(" w3-show", "");
+  }
+}
+</script>
+
 
 
 <div class="w3-container w3-black w3-border-bottom w3-border-black">
-  <h1>Andy B Goode, Vintage Singer</h1> 
+  <h1>Andy B Goode</h1> 
 <!--  <p>Andy B Goode - Vintage Singer</p> -->
 </div>
 
@@ -79,7 +108,7 @@
  <img src="photos/andybgoode0001-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="1950s/60s Rock and Roll Entertainer"> 
  <img src="photos/thejays0005-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="1960s Rat Pack, Swing Singer"> 
  <img src="photos/thejays0004-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="1940s and Wartime Vocalist"> 
- <img src="photos/andybgoode0004-thumb.jpg" class="w3-image w3-image-abg-4 w3-round" alt="xxxx"> 
+ <img src="photos/andybgoode0014-thumb.jpg" class="w3-image w3-image-abg-4 w3-round" alt="xxxx"> 
  <img src="photos/andybgoode0010-thumb.jpg" class="w3-image w3-image-abg-5 w3-round" alt="xxxx"> 
  <img src="photos/andybgoode0019-thumb.jpg" class="w3-image w3-image-abg-6 w3-round" alt="xxxx"> 
 </div>
@@ -90,15 +119,12 @@
 <div class="w3-row-padding">
   <div class="w3-third w3-black">
     <h2>Rock and Roll</h2>
-    <p>"Shake Rattle and Roll"</p>
+    <p>"Rock Around The Clock"</p>
 <ul>
-<li>1950s/1960s Rock and Roll Sets</li>
-<li>Dynamic Rock n Roll Vocalist</li>
-<li>Jive the night away to the energetic sounds those classic Rock n Roll songs</li>
-<li>Outfit: Fun 1950s 'Teddy boy' style complete with Blue Suede shoes</li>
-<li>Rock and Roll Christmas set also available</li>
-<li>Epic hits by: Chuck Berry, Bill Haley and his Comets, Eddie Cochran, Elvis, Danny and the Juniors, Everly Brothers, Johnny Tillotson, The Pengiuns, Buddy Holly, The Platters and many more</li>
-<li><a href="songlist.html">Song List</a></li>
+<li>1950s/60s Dynamic Rock and Roll Sets</li>
+<li>Jive the night away to those energetic tunes</li>
+<li>Outfit: 'Teddy Boy' style complete with Blue Suede shoes</li>
+<li>Epic hits by: Chuck Berry, Bill Haley and his Comets, Eddie Cochran, Elvis, Danny and the Juniors, Everly Brothers, Buddy Holly, Johnny Tillotson, The Pengiuns, The Platters, etc ... <a href="songlist.html">Songs</a></li>
 </ul>
   </div>
 
@@ -107,11 +133,9 @@
     <p>"When I Fall in Love it will be Forever"</p>
 <ul>
 <li>Classy Rat Pack, Swing and Crooning hits.</li>
-<li>Smooth love songs by a heartfelt Crooner</li>
-<li>Outfit: DJ, Sinatra-style</li>
-<li>xx xx xx xxx xxx </li>
-<li>Epic hits by: Frank Sinatra, Dean Martin, Nat King Cole, Tony Bennett, Bobby Darin, Andy Williams, Michael Buble, Harry Connick Jr and many more</li>
-<li><a href="songlist.html">Song List</a></li>
+<li>Smooth love songs by a heartfelt Crooner.</li>
+<li>Outfit: Dinner Jacket and Trilby</li>
+<li>Epic hits by: Frank Sinatra, Dean Martin, Nat King Cole, Tony Bennett, Bobby Darin, Andy Williams, Michael Buble, Harry Connick Jr, etc ... <a href="songlist.html">Songs</a></li>
 </ul>
   </div>
 
@@ -120,12 +144,9 @@
     <p>"Goodnight Sweetheart"</p>
 <ul>
 <li>1940s and Wartime Sets</li>
-<li>Crooner classics</li>
-<li>Wartime songs</li>
-<li>Sing along tunes</li>
+<li>Crooner classics and Sing along tunes</li>
 <li>Outfit: 1940s style</li>
-<li>Epic hits by: Nat King Cole, Bing Crosby, Al Bowlly, Vera Lynn, Cliff Edwards, James Baskett, Flanagan and Allen, Vaughn Monroe, George Formby, Frank Sinatra, Michael Buble and many more.</li>
-<li><a href="songlist.html">Song List</a></li>
+<li>Epic hits by: Nat King Cole, Bing Crosby, Al Bowlly, Vera Lynn, Cliff Edwards, James Baskett, Flanagan and Allen, Vaughn Monroe, George Formby, Frank Sinatra, etc ... <a href="songlist.html">Songs</a></li>
 </ul>
   </div>
 
@@ -136,10 +157,10 @@
 
 <div class="w3-container w3-black w3-border-bottom w3-border-black">
 <div class="w3-cell-row">
- <img src="photos/andybgoode0001-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="1950s/60s Rock and Roll Entertainer"> 
- <img src="photos/thejays0005-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="1960s Rat Pack, Swing Singer"> 
- <img src="photos/thejays0004-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="1940s and Wartime Vocalist"> 
- <img src="photos/andybgoode0004-thumb.jpg" class="w3-image w3-image-abg-4 w3-round" alt="xxxx"> 
+ <img src="photos/andybgoode0004-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxxx"> 
+ <img src="photos/thejays0010-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxxx"> 
+ <img src="photos/thejays0016-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxxx"> 
+ <img src="photos/thejays0012-thumb.jpg" class="w3-image w3-image-abg-4 w3-round" alt="xxxx"> 
  <img src="photos/andybgoode0010-thumb.jpg" class="w3-image w3-image-abg-5 w3-round" alt="xxxx"> 
  <img src="photos/andybgoode0019-thumb.jpg" class="w3-image w3-image-abg-6 w3-round" alt="xxxx"> 
 </div>
@@ -151,28 +172,25 @@
 <div class="w3-row-padding">
   <div class="w3-third w3-black"> <!-- w3-grey -->
     <h2>Quality Vintage Entertainment</h2>
-    <p>Professional 1940s to 1970s  Vintage Entertainer, Swing Singer. Let me enliven your events with some fun vintage 'Rock n Roll' music. Get your feet moving on the dance floor to some vintage 'Rock n Roll' classics.</p>
+    <p>Professional 1940s to 1970s  Vintage Entertainer, Swing Singer who will enliven your events with vintage music. Get your feet moving on the dance floor to some vintage 'Rock n Roll' classics.</p>
 <ul>
 <li>Available for: Birthdays, Weddings, Anniversaries, Fayres, Fetes, Food Fayres, Vintage Events, Parties, Dances, Church Events, Residential Homes, Care Homes, Hospices, etc...</li>
 <li>Based in Tamworth, Staffordshire, Midlands</li>
-<li>I only use high quality backing tracks</li>
+<li>High quality backing tracks</li>
 <li>Powerful 2800W PA</li>
 <li>Jazzy stage lights add real sparkle</li>
-<li>Current Public Liability Insurance</li>
+<li>Current Public Liability Insurance (PLI)</li>
 <li>PAT Tested Equipment</li>
 </ul>
   </div>
 
   <div class="w3-third w3-black"> <!-- w3-dark-grey -->
     <h2>A Vintage Christmas</h2>
-<p>Rock and Roll and Crooning Christmas.</p> 
+<p>"Have a Rock and Roll Christmas"</p> 
 <ul>
-<li>Classy Rat Pack / Swing and Crooning hits.</li>
-<li>Lovely uplifting seasonal classics</li>
-<li>Outfit: Smart Dinner Jacket</li>
-<li>xx xx xx xxx xxx </li>
-<li>Epic hits by: Frank Sinatra, Dean Martin, Andy Williams, Michael Buble and many more</li>
-<li><a href="songlist.html">Song List</a></li>
+<li>Memorable uplifting Rock and Seasonal classics</li>
+<li>Outfit: Dinner Jacket, Bow Tie</li>
+<li>Epic hits by: Bing Crosby, Bobby Helms, Chuck Berry, Elvis, Dean Martin, Michael Buble, etc ... <a href="songlist.html">Songs</a></li>
 </ul>
   </div>
 
@@ -180,19 +198,8 @@
     <h2>1940s Vocal Harmony Group</h2>
 <p>I'm also part of a 1940s Vocal Harmony Group named <a href="http://www.TheJaysVintage.com">'The Jays Vintage'</a>. 
 We sing delightful vintage tunes in the style of Bing Crosby and The Andrew's Sisters while dressed in lovely vintage style outfits. 
-We also offer combined 1940s + Andy B Goode 1950s/1960s Rock n Roll gigs.
-Perfect for:</p>
-<ul>
-<li>1940s Events</li>
-<li>Town Centre / Bandstand Events</li>
-<li>Christmas Events</li>
-<li>Food Festivals</li>
-<li>Vintage Fairs</li>
-<li>Veterans Events</li>
-<li>Garden Party</li>
-<li>Golden Wedding Anniversary</li>
-<li><a href="songlist.html">Song List</a></li>
-</ul>
+We also offer combined 1940s + Andy B Goode 1950s/1960s Rock n Roll gigs.<br/>
+Perfect for: 1940s Events, Vintage Fairs, Town Centre, Bandstand Events, Christmas Events, Food Festivals, Veterans Events, Garden Parties, Golden Wedding Anniversary <a href="songlist.html">Songs</a></p>
   </div>
 
 </div>
@@ -202,9 +209,9 @@ Perfect for:</p>
 
 <div class="w3-container w3-black w3-border-bottom w3-border-black">
 <div class="w3-cell-row">
- <img src="photos/andybgoode0001-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="1950s/60s Rock and Roll Entertainer"> 
- <img src="photos/thejays0005-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="1960s Rat Pack, Swing Singer"> 
- <img src="photos/thejays0004-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="1940s and Wartime Vocalist"> 
+ <img src="photos/thejays0015-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxxx"> 
+ <img src="photos/andybgoode0020-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxxx"> 
+ <img src="photos/thejays0004-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxxx"> 
  <img src="photos/andybgoode0004-thumb.jpg" class="w3-image w3-image-abg-4 w3-round" alt="xxxx"> 
  <img src="photos/andybgoode0010-thumb.jpg" class="w3-image w3-image-abg-5 w3-round" alt="xxxx"> 
  <img src="photos/andybgoode0019-thumb.jpg" class="w3-image w3-image-abg-6 w3-round" alt="xxxx"> 
@@ -217,8 +224,7 @@ Perfect for:</p>
 <div class="w3-container w3-black">
   <h1>Upcoming Events</h1>
   <p>I am delighted to announce some public gigs where vintage classics will be the order of the day. 
-Some are solo gigs and others with <a href="http://www.TheJaysVintage.com">'The Jays Vintage'</a> (1940s Vocal Harmony).</p>
-  <p>'ABG': Andy B Goode solo gig<br/>'Jays': Andy B Goode and The Jays Vintage gig.</p>
+Some are solo gigs ('ABG') and others with <a href="http://www.TheJaysVintage.com">'The Jays Vintage'</a> ('Jays').</p>
 <ul>
 <li>11 March 2018 Sunday 11am till 5pm, Mum Knows Best Fun Day and Bake Off, Marstons Sports and Social Club, Shobnall Road, Burton-Upon-Trent, Staffordshire (ABG)</li>
 <li>22 April 2018 Sunday 11am till 5pm, Burton Bounce Spring Fling, Marstons Sports and Social Club, Shobnall Road, Burton-Upon-Trent, Staffordshire (ABG)</li>
@@ -288,17 +294,6 @@ Some are solo gigs and others with <a href="http://www.TheJaysVintage.com">'The 
 </div>
 
 
-
-<div class="w3-bar w3-black">
-  <a href="#" class="w3-bar-item w3-button w3-border w3-mobile w3-mobile">Home</a>
-  <a href="news.html" class="w3-bar-item w3-button w3-border w3-mobile">News</a>
-  <a href="photos.html" class="w3-bar-item w3-button w3-border w3-mobile">Photos</a>
-  <a href="music.html" class="w3-bar-item w3-button w3-border w3-mobile">Music</a>
-  <a href="videos.html" class="w3-bar-item w3-button w3-border w3-mobile">Videos</a>
-  <a href="songlist.html" class="w3-bar-item w3-button w3-border w3-mobile">Songs</a>
-  <a href="testimonials.html" class="w3-bar-item w3-button w3-border w3-mobile">Testimonials</a>
-  <a href="#contact" class="w3-bar-item w3-button w3-border w3-mobile">Contact</a>
-</div>
 
 
 </div>
