--- a/index2.html
+++ b/index2.html
@@ -67,7 +67,7 @@
 </div>
 -->
 <div class="w3-bar w3-black">
-  <a href="javascript:void(0)" class="w3-bar-item w3-button w3-hide-large w3-hide-medium" onclick="menuFunction()">&#9776;</a>
+  <a href="javascript:void(0)" class="w3-bar-item w3-button w3-border w3-hide-large w3-hide-medium" onclick="menuFunction()">&#9776;</a>
 <!--  <a href="#" class="w3-bar-item w3-button w3-border">Home</a> -->
   <a href="#contact" class="w3-bar-item w3-button w3-border">Contact</a>
   <a href="photos.html" class="w3-bar-item w3-button w3-border">Photos</a>
@@ -105,6 +105,16 @@ function menuFunction() {
 
 <div class="w3-container w3-black w3-border-bottom w3-border-black">
 <div class="w3-cell-row">
+ <img src="photos/andybgoode0001-thumb.jpg" class="w3-image w3-image-abg-x w3-round" alt="1950s/60s Rock and Roll Entertainer"> 
+ <img src="photos/thejays0005-thumb.jpg" class="w3-image w3-image-abg-x w3-round" alt="1960s Rat Pack, Swing Singer"> 
+ <img src="photos/thejays0004-thumb.jpg" class="w3-image w3-image-abg-x w3-round" alt="1940s and Wartime Vocalist"> 
+</div>
+</div>
+
+
+
+<div class="w3-container w3-black w3-border-bottom w3-border-black">
+<div class="w3-cell-row">
  <img src="photos/andybgoode0001-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="1950s/60s Rock and Roll Entertainer"> 
  <img src="photos/thejays0005-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="1960s Rat Pack, Swing Singer"> 
  <img src="photos/thejays0004-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="1940s and Wartime Vocalist"> 
@@ -122,8 +132,8 @@ function menuFunction() {
     <p>"Rock Around The Clock"</p>
 <ul>
 <li>1950s/60s Dynamic Rock and Roll Sets</li>
-<li>Jive the night away to those energetic tunes</li>
-<li>Outfit: 'Teddy Boy' style complete with Blue Suede shoes</li>
+<li>Jive the night away to those energetic hits</li>
+<li>Outfit: 'Teddy Boy' Jacket, Blue Suede shoes</li>
 <li>Epic hits by: Chuck Berry, Bill Haley and his Comets, Eddie Cochran, Elvis, Danny and the Juniors, Everly Brothers, Buddy Holly, Johnny Tillotson, The Pengiuns, The Platters, etc ... <a href="songlist.html">Songs</a></li>
 </ul>
   </div>
@@ -132,9 +142,9 @@ function menuFunction() {
     <h2>Rat Pack</h2>
     <p>"When I Fall in Love it will be Forever"</p>
 <ul>
-<li>Classy Rat Pack, Swing and Crooning hits.</li>
-<li>Smooth love songs by a heartfelt Crooner.</li>
-<li>Outfit: Dinner Jacket and Trilby</li>
+<li>Classy Rat Pack, Swing and Crooning hits</li>
+<li>Smooth love songs by a heartfelt Crooner</li>
+<li>Outfit: Dinner Jacket, Trilby and Brogues</li>
 <li>Epic hits by: Frank Sinatra, Dean Martin, Nat King Cole, Tony Bennett, Bobby Darin, Andy Williams, Michael Buble, Harry Connick Jr, etc ... <a href="songlist.html">Songs</a></li>
 </ul>
   </div>
@@ -144,7 +154,7 @@ function menuFunction() {
     <p>"Goodnight Sweetheart"</p>
 <ul>
 <li>1940s and Wartime Sets</li>
-<li>Crooner classics and Sing along tunes</li>
+<li>Forties tunes and Sing alongs</li>
 <li>Outfit: 1940s style</li>
 <li>Epic hits by: Nat King Cole, Bing Crosby, Al Bowlly, Vera Lynn, Cliff Edwards, James Baskett, Flanagan and Allen, Vaughn Monroe, George Formby, Frank Sinatra, etc ... <a href="songlist.html">Songs</a></li>
 </ul>
@@ -172,7 +182,8 @@ function menuFunction() {
 <div class="w3-row-padding">
   <div class="w3-third w3-black"> <!-- w3-grey -->
     <h2>Quality Vintage Entertainment</h2>
-    <p>Professional 1940s to 1970s  Vintage Entertainer, Swing Singer who will enliven your events with vintage music. Get your feet moving on the dance floor to some vintage 'Rock n Roll' classics.</p>
+    <p>Professional Vintage Entertainer who will enliven your events with vintage music. 
+	Get your feet moving on the dance floor to some 'Rock n Roll', Rat Pack, Swing, 1940s and 1970s classics.</p>
 <ul>
 <li>Available for: Birthdays, Weddings, Anniversaries, Fayres, Fetes, Food Fayres, Vintage Events, Parties, Dances, Church Events, Residential Homes, Care Homes, Hospices, etc...</li>
 <li>Based in Tamworth, Staffordshire, Midlands</li>
@@ -192,14 +203,20 @@ function menuFunction() {
 <li>Outfit: Dinner Jacket, Bow Tie</li>
 <li>Epic hits by: Bing Crosby, Bobby Helms, Chuck Berry, Elvis, Dean Martin, Michael Buble, etc ... <a href="songlist.html">Songs</a></li>
 </ul>
+    <h2>1970s </h2>
+<p>"Up to the Spirit in the Sky"</p>
+<ul>
+<li>Those colourful seventies will come alive</li>
+<li>Epic hits by: Barry Manilow, Blue Swede, Queen, Norman Greenbaum, Elvis, etc ... <a href="songlist.html">Songs</a></li>
+</ul>
   </div>
 
   <div class="w3-third w3-black">
     <h2>1940s Vocal Harmony Group</h2>
 <p>I'm also part of a 1940s Vocal Harmony Group named <a href="http://www.TheJaysVintage.com">'The Jays Vintage'</a>. 
-We sing delightful vintage tunes in the style of Bing Crosby and The Andrew's Sisters while dressed in lovely vintage style outfits. 
-We also offer combined 1940s + Andy B Goode 1950s/1960s Rock n Roll gigs.<br/>
-Perfect for: 1940s Events, Vintage Fairs, Town Centre, Bandstand Events, Christmas Events, Food Festivals, Veterans Events, Garden Parties, Golden Wedding Anniversary <a href="songlist.html">Songs</a></p>
+We sing delightful vintage tunes in the style of Bing Crosby and The Andrew's Sisters while dressed in lovely vintage outfits. 
+We also offer gigs with Andy B Goode for that special event.<br/>
+Perfect for: 1940s Events, Vintage Fairs, Town Centre, Bandstands, Christmas Events, Food Festivals, Veterans Events, Garden Parties, Golden Wedding Anniversaries <a href="songlist.html">Songs</a></p>
   </div>
 
 </div>
@@ -226,6 +243,9 @@ Perfect for: 1940s Events, Vintage Fairs, Town Centre, Bandstand Events, Christm
   <p>I am delighted to announce some public gigs where vintage classics will be the order of the day. 
 Some are solo gigs ('ABG') and others with <a href="http://www.TheJaysVintage.com">'The Jays Vintage'</a> ('Jays').</p>
 <ul>
+<li>Events info coming soon.</li>
+<li>Check back here later.</li>
+<!--
 <li>11 March 2018 Sunday 11am till 5pm, Mum Knows Best Fun Day and Bake Off, Marstons Sports and Social Club, Shobnall Road, Burton-Upon-Trent, Staffordshire (ABG)</li>
 <li>22 April 2018 Sunday 11am till 5pm, Burton Bounce Spring Fling, Marstons Sports and Social Club, Shobnall Road, Burton-Upon-Trent, Staffordshire (ABG)</li>
 <li>7 May 2018 Monday 12 till 4pm, Vintage Fair at National Arboretum, Croxall Road, Alrewas, Burton-on-Trent DE13 7AR (Jays)</li>
@@ -235,6 +255,7 @@ Some are solo gigs ('ABG') and others with <a href="http://www.TheJaysVintage.co
 <li>23 Sept 2018 Sunday 12 till 5pm, Southam Retro Revival Day, Southam Town Centre (ABG)</li>
 <li>30 Sept 2018 Sunday 10am till 4pm, Lou Lou's Vintage Fair, Albert Hall, N Circus St, Nottingham, NG1 5AA United Kingdom (ABG)</li>
 <li>24 Nov 2018 Saturday 7pm, Rock and Roll night with Fish and Chips (Tickets in advance £12.50), Edingale Village Hall, 7 Moores Croft, Edingale, Tamworth B79 9LJ (ABG)</li>
+-->
  </ul>  
 </div>
 
@@ -274,7 +295,7 @@ Some are solo gigs ('ABG') and others with <a href="http://www.TheJaysVintage.co
 <li id="liInstagram">Instagram: <a href="https://www.instagram.com/andybgoodevocalist">andybgoodevocalist</a></li>
 <li id="liYouTube">YouTube: <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">Andy B Goode</a></li>
 <li id="liTwitter">Twitter: <a href="http://www.twitter.com/AndyBGoode">@AndyBGoode</a></li>
-<li id='liJays'>The Jays Vintage: <a href='http://www.TheJaysVintage.com'>The Jays Vintage</a></li>
+<!--<li id='liJays'>The Jays Vintage: <a href='http://www.TheJaysVintage.com'>The Jays Vintage</a></li>-->
 <li id="liWebsite">Version: v2.5.0</li>
 </ul>
   </div>
@@ -288,7 +309,7 @@ Some are solo gigs ('ABG') and others with <a href="http://www.TheJaysVintage.co
   <div class="w3-third w3-black"> <!-- w3-dark-grey -->
     <h2>Jude Britton</h2>
     <p>Acoustic Singer Songwriter</p>
-    <p>Having shared a stage with him, I can whole heartly recommend this talented chap.</p>
+    <p>Having shared a stage with Jude, I can whole heartly recommend this talented chap. He performs hits from the 1970s to the modern day, along with some of his own songs.</p>
     <p><a href='http://www.JudeBritton.com'>Jude Britton's Website</a></p>
   </div>
 </div>
