--- a/index2.html
+++ b/index2.html
@@ -75,13 +75,13 @@
   <a href="music.html" class="w3-bar-item w3-button w3-border w3-hide-small">Music</a>
   <a href="songlist.html" class="w3-bar-item w3-button w3-border w3-hide-small">Songs</a>
   <a href="news.html" class="w3-bar-item w3-button w3-border w3-hide-small">News</a>
-  <a href="testimonials.html" class="w3-bar-item w3-button w3-border w3-hide-small">Testimonials</a>
+  <a href="testimonials.html" class="w3-bar-item w3-button w3-border w3-hide-small">Reviews</a>
 </div>
 <div id="topMenu" class="w3-bar-block w3-border w3-hide w3-hide-large w3-hide-medium w3-black">
   <a href="music.html" class="w3-bar-item w3-button w3-border">Music</a>
   <a href="songlist.html" class="w3-bar-item w3-button w3-border">Songs</a>
   <a href="news.html" class="w3-bar-item w3-button w3-border">News</a>
-  <a href="testimonials.html" class="w3-bar-item w3-button w3-border">Testimonials</a>
+  <a href="testimonials.html" class="w3-bar-item w3-button w3-border">Reviews</a>
 </div>
 <script>
 function menuFunction() {
@@ -105,14 +105,14 @@ function menuFunction() {
 
 <div class="w3-container w3-black w3-border-bottom w3-border-black">
 <div class="w3-cell-row">
- <img src="photos/andybgoode0001-thumb.jpg" class="w3-image w3-image-abg-x w3-round" alt="1950s/60s Rock and Roll Entertainer"> 
- <img src="photos/thejays0005-thumb.jpg" class="w3-image w3-image-abg-x w3-round" alt="1960s Rat Pack, Swing Singer"> 
- <img src="photos/thejays0004-thumb.jpg" class="w3-image w3-image-abg-x w3-round" alt="1940s and Wartime Vocalist"> 
+ <img src="photos/andybgoode0034-highres.jpg" class="w3-image w3-image-abg-x w3-round" alt="1950s/60s Rock and Roll Entertainer"> 
+ <img src="photos/andybgoode0035-highres.jpg" class="w3-image w3-image-abg-x w3-round" alt="1960s Rat Pack, Swing Singer"> 
+ <img src="photos/thejays0005-highres2.jpg" class="w3-image w3-image-abg-x w3-round" alt="1940s and Wartime Vocalist"> 
 </div>
 </div>
 
 
-
+<!--
 <div class="w3-container w3-black w3-border-bottom w3-border-black">
 <div class="w3-cell-row">
  <img src="photos/andybgoode0001-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="1950s/60s Rock and Roll Entertainer"> 
@@ -123,7 +123,7 @@ function menuFunction() {
  <img src="photos/andybgoode0019-thumb.jpg" class="w3-image w3-image-abg-6 w3-round" alt="xxxx"> 
 </div>
 </div>
-
+-->
 
 
 <div class="w3-row-padding">
