--- a/index2.html
+++ b/index2.html
@@ -39,7 +39,7 @@
 
 </head>
 
-<body>
+<body onresize="screenResize()">
 <div itemscope itemtype="http://schema.org/WebSite">
   <div itemprop="author" itemscope itemtype="http://schema.org/Person"><meta itemprop="name" content="Andy B Goode"/></div>
   <div itemprop="accountablePerson" itemscope itemtype="http://schema.org/Person"><meta itemprop="name" content="Andy B Goode"/></div>
@@ -70,14 +70,15 @@
   <a href="javascript:void(0)" class="w3-bar-item w3-button w3-border w3-hide-large w3-hide-medium" onclick="menuFunction()">&#9776;</a>
 <!--  <a href="#" class="w3-bar-item w3-button w3-border">Home</a> -->
   <a href="#contact" class="w3-bar-item w3-button w3-border">Contact</a>
-  <a href="photos.html" class="w3-bar-item w3-button w3-border">Photos</a>
   <a href="videos.html" class="w3-bar-item w3-button w3-border">Videos</a>
+  <a href="photos.html" class="w3-bar-item w3-button w3-border w3-hide-small">Photos</a>
   <a href="music.html" class="w3-bar-item w3-button w3-border w3-hide-small">Music</a>
   <a href="songlist.html" class="w3-bar-item w3-button w3-border w3-hide-small">Songs</a>
   <a href="news.html" class="w3-bar-item w3-button w3-border w3-hide-small">News</a>
   <a href="testimonials.html" class="w3-bar-item w3-button w3-border w3-hide-small">Reviews</a>
 </div>
 <div id="topMenu" class="w3-bar-block w3-border w3-hide w3-hide-large w3-hide-medium w3-black">
+  <a href="photos.html" class="w3-bar-item w3-button w3-border">Photos</a>
   <a href="music.html" class="w3-bar-item w3-button w3-border">Music</a>
   <a href="songlist.html" class="w3-bar-item w3-button w3-border">Songs</a>
   <a href="news.html" class="w3-bar-item w3-button w3-border">News</a>
@@ -92,6 +93,20 @@ function menuFunction() {
     x.className = x.className.replace(" w3-show", "");
   }
 }
+
+
+function CalcScreen() {
+	
+	var aW = screen.availWidth;
+	alert("A");
+	
+}
+
+
+function screenResize() {
+	CalcScreen();
+}
+
 </script>
 
 
@@ -105,9 +120,9 @@ function menuFunction() {
 
 <div class="w3-container w3-black w3-border-bottom w3-border-black">
 <div class="w3-cell-row">
- <img src="photos/andybgoode0034-highres.jpg" class="w3-image w3-image-abg-x w3-round" alt="1950s/60s Rock and Roll Entertainer"> 
- <img src="photos/andybgoode0035-highres.jpg" class="w3-image w3-image-abg-x w3-round" alt="1960s Rat Pack, Swing Singer"> 
- <img src="photos/andybgoode0036-highres.jpg" class="w3-image w3-image-abg-x w3-round" alt="1940s and Wartime Vocalist"> 
+ <img src="photos/andybgoode0034.jpg" class="w3-image w3-image-abg-x w3-round" alt="1950s/60s Rock and Roll Entertainer"> 
+ <img src="photos/andybgoode0035.jpg" class="w3-image w3-image-abg-x w3-round" alt="1960s Rat Pack, Swing Singer"> 
+ <img src="photos/andybgoode0036.jpg" class="w3-image w3-image-abg-x w3-round" alt="1940s and Wartime Vocalist"> 
 </div>
 </div>
 
@@ -167,11 +182,11 @@ function menuFunction() {
 
 <div class="w3-container w3-black w3-border-bottom w3-border-black">
 <div class="w3-cell-row">
- <img src="photos/andybgoode0004-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxxx"> 
  <img src="photos/thejays0010-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxxx"> 
+ <img src="photos/andybgoode0037-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxxx"> 
  <img src="photos/thejays0016-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxxx"> 
- <img src="photos/thejays0012-thumb.jpg" class="w3-image w3-image-abg-4 w3-round" alt="xxxx"> 
- <img src="photos/andybgoode0010-thumb.jpg" class="w3-image w3-image-abg-5 w3-round" alt="xxxx"> 
+ <img src="photos/andybgoode0004-thumb.jpg" class="w3-image w3-image-abg-4 w3-round" alt="xxxx"> 
+ <img src="photos/andybgoode0040-thumb.jpg" class="w3-image w3-image-abg-5 w3-round" alt="xxxx"> 
  <img src="photos/andybgoode0019-thumb.jpg" class="w3-image w3-image-abg-6 w3-round" alt="xxxx"> 
 </div>
 </div>
@@ -212,7 +227,7 @@ function menuFunction() {
   </div>
 
   <div class="w3-third w3-black">
-    <h2>1940s Vocal Harmony Group</h2>
+    <h2>1940s Harmony Group</h2>
 <p>I'm also part of a 1940s Vocal Harmony Group named <a href="http://www.TheJaysVintage.com">'The Jays Vintage'</a>. 
 We sing delightful vintage tunes in the style of Bing Crosby and The Andrew's Sisters while dressed in lovely vintage outfits. 
 We also offer gigs with Andy B Goode for that special event.<br/>
@@ -228,10 +243,10 @@ Perfect for: 1940s Events, Vintage Fairs, Town Centre, Bandstands, Christmas Eve
 <div class="w3-cell-row">
  <img src="photos/thejays0015-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxxx"> 
  <img src="photos/andybgoode0020-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxxx"> 
- <img src="photos/thejays0004-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxxx"> 
- <img src="photos/andybgoode0004-thumb.jpg" class="w3-image w3-image-abg-4 w3-round" alt="xxxx"> 
- <img src="photos/andybgoode0010-thumb.jpg" class="w3-image w3-image-abg-5 w3-round" alt="xxxx"> 
- <img src="photos/andybgoode0019-thumb.jpg" class="w3-image w3-image-abg-6 w3-round" alt="xxxx"> 
+ <img src="photos/andybgoode0038-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxxx"> 
+ <img src="photos/andybgoode0014-thumb.jpg" class="w3-image w3-image-abg-4 w3-round" alt="xxxx"> 
+ <img src="photos/andybgoode0039-thumb.jpg" class="w3-image w3-image-abg-5 w3-round" alt="xxxx"> 
+ <img src="photos/andybgoode0010-thumb.jpg" class="w3-image w3-image-abg-6 w3-round" alt="xxxx"> 
 </div>
 </div>
 
@@ -243,7 +258,7 @@ Perfect for: 1940s Events, Vintage Fairs, Town Centre, Bandstands, Christmas Eve
   <p>I am delighted to announce some public gigs where vintage classics will be the order of the day. 
 Some are solo gigs ('ABG') and others with <a href="http://www.TheJaysVintage.com">'The Jays Vintage'</a> ('Jays').</p>
 <ul>
-<li>Events info coming soon.</li>
+<li>Event info coming soon.</li>
 <li>Check back here later.</li>
 <!--
 <li>11 March 2018 Sunday 11am till 5pm, Mum Knows Best Fun Day and Bake Off, Marstons Sports and Social Club, Shobnall Road, Burton-Upon-Trent, Staffordshire (ABG)</li>
@@ -263,18 +278,18 @@ Some are solo gigs ('ABG') and others with <a href="http://www.TheJaysVintage.co
 
 <div class="w3-container w3-black w3-border-bottom w3-border-black">
 <div class="w3-cell-row">
- <img src="photos/andybgoode0001-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="1950s/60s Rock and Roll Entertainer"> 
- <img src="photos/thejays0005-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="1960s Rat Pack, Swing Singer"> 
+ <img src="photos/andybgoode0004-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="1950s/60s Rock and Roll Entertainer"> 
+ <img src="photos/thejays0014-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="1960s Rat Pack, Swing Singer"> 
  <img src="photos/thejays0004-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="1940s and Wartime Vocalist"> 
- <img src="photos/andybgoode0004-thumb.jpg" class="w3-image w3-image-abg-4 w3-round" alt="xxxx"> 
- <img src="photos/andybgoode0010-thumb.jpg" class="w3-image w3-image-abg-5 w3-round" alt="xxxx"> 
- <img src="photos/andybgoode0019-thumb.jpg" class="w3-image w3-image-abg-6 w3-round" alt="xxxx">  
+ <img src="photos/andybgoode0041-thumb.jpg" class="w3-image w3-image-abg-4 w3-round" alt="xxxx"> 
+ <img src="photos/andybgoode0008-thumb.jpg" class="w3-image w3-image-abg-5 w3-round" alt="xxxx"> 
+ <img src="photos/andybgoode0016-thumb.jpg" class="w3-image w3-image-abg-6 w3-round" alt="xxxx">  
 </div>
 </div>
 
 
 
-<div class="w3-container w3-black">
+<div class="w3-container w3-border-bottom w3-border-black w3-black">
   <h1>Social Media</h1> 
   <p>Check out my <a href="https://www.facebook.com/AndyBGoode">Facebook</a>, <a href="https://www.instagram.com/andybgoodevocalist">Instagram</a> or even <a href="http://www.twitter.com/AndyBGoode">Twitter</a>.</p>
   <p>RECENT INSTAGRAM POSTS (from 'Andy B Goode' and 'The Jays Vintage')</p>
@@ -287,6 +302,7 @@ Some are solo gigs ('ABG') and others with <a href="http://www.TheJaysVintage.co
 
 <div id="contact" class="w3-row-padding">
   <div class="w3-third w3-black">
+    <img src="photos/andybgoode0004-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="1950s/60s Rock and Roll Entertainer">
 	<h1>Contact Me</h1>
 <ul id="contactList">
 <li id="liPhone">Phone: 07415 338859</li>
@@ -301,15 +317,18 @@ Some are solo gigs ('ABG') and others with <a href="http://www.TheJaysVintage.co
   </div>
 
   <div class="w3-third w3-black"> <!-- w3-grey -->
+    <img src="photos/thejays0014-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="1950s/60s Rock and Roll Entertainer">
     <h2>The Jays Vintage</h2>
-    <p>Vintage 1940s Vocal Harmony Group</p>
+    <p>Vintage 1940s Vocal Harmony Group.</p>
+	<p>Bing Crosby / Andrew's Sisters style classics.</p>
     <p><a href='http://www.TheJaysVintage.com'>The Jays Vintage Website</a></p>
   </div>
 
   <div class="w3-third w3-black"> <!-- w3-dark-grey -->
+    <img src="photos/judebritton0005.jpg" class="w3-image w3-image-abg w3-round" alt="Jude Britton Acoustic Singer Songwriter"> 
     <h2>Jude Britton</h2>
     <p>Acoustic Singer Songwriter</p>
-    <p>Having shared a stage with Jude, I can whole heartly recommend this talented chap. He performs hits from the 1970s to the modern day, along with some of his own songs.</p>
+    <p>Having shared a stage with Jude, I can whole heartly recommend this talented chap. He performs hits from the 1970s to the modern day, along with some of his own songs. Looping is his speciality.</p>
     <p><a href='http://www.JudeBritton.com'>Jude Britton's Website</a></p>
   </div>
 </div>
@@ -320,6 +339,10 @@ Some are solo gigs ('ABG') and others with <a href="http://www.TheJaysVintage.co
 </div>
 <script>
 //width was 260
+
+
+CalcScreen();
+
  var changebleLimit = 12;
  var imageWidth = 200;
  var ajb1 = '3153218281.1677ed0.';
@@ -329,11 +352,12 @@ Some are solo gigs ('ABG') and others with <a href="http://www.TheJaysVintage.co
         get: 'user',
         userId: '3153218281',
         accessToken: ajb3,
-        limit: 12,
+        limit: changebleLimit,
         resolution: 'low_resolution',
         template: '<a href="{{link}}"> <img width="'+imageWidth+'" src="{{image}}" alt="({{location}}) {{caption}}"/></a>'
     });
     userFeed.run();
 </script>
+
 </body>
 </html>
