--- a/index2.html
+++ b/index2.html
@@ -118,13 +118,13 @@ function screenResize() {
 
 
 
-<div class="w3-container w3-black w3-border-bottom w3-border-black">
+<!--<div class="w3-container w3-black w3-border-bottom w3-border-black">-->
 <div class="w3-cell-row">
  <img src="photos/andybgoode0034.jpg" class="w3-image w3-image-abg-x w3-round" alt="1950s/60s Rock and Roll Entertainer"> 
  <img src="photos/andybgoode0035.jpg" class="w3-image w3-image-abg-x w3-round" alt="1960s Rat Pack, Swing Singer"> 
  <img src="photos/andybgoode0036.jpg" class="w3-image w3-image-abg-x w3-round" alt="1940s and Wartime Vocalist"> 
 </div>
-</div>
+<!--</div>-->
 
 
 <!--
@@ -182,12 +182,13 @@ function screenResize() {
 
 <div class="w3-container w3-black w3-border-bottom w3-border-black">
 <div class="w3-cell-row">
- <img src="photos/thejays0010-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxxx"> 
- <img src="photos/andybgoode0037-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxxx"> 
- <img src="photos/thejays0016-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxxx"> 
+ <img src="photos/thejays0010-thumb.jpg" class="w3-image w3-image-abg-1 w3-round" alt="xxxx"> 
+ <img src="photos/andybgoode0037-thumb.jpg" class="w3-image w3-image-abg-2 w3-round" alt="xxxx"> 
+ <img src="photos/thejays0016-thumb.jpg" class="w3-image w3-image-abg-3 w3-round" alt="xxxx"> 
  <img src="photos/andybgoode0004-thumb.jpg" class="w3-image w3-image-abg-4 w3-round" alt="xxxx"> 
  <img src="photos/andybgoode0040-thumb.jpg" class="w3-image w3-image-abg-5 w3-round" alt="xxxx"> 
  <img src="photos/andybgoode0019-thumb.jpg" class="w3-image w3-image-abg-6 w3-round" alt="xxxx"> 
+ <img src="photos/andybgoode0010-thumb.jpg" class="w3-image w3-image-abg-7 w3-round" alt="xxxx"> 
 </div>
 </div>
 
@@ -241,12 +242,13 @@ Perfect for: 1940s Events, Vintage Fairs, Town Centre, Bandstands, Christmas Eve
 
 <div class="w3-container w3-black w3-border-bottom w3-border-black">
 <div class="w3-cell-row">
- <img src="photos/thejays0015-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxxx"> 
- <img src="photos/andybgoode0020-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxxx"> 
- <img src="photos/andybgoode0038-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxxx"> 
+ <img src="photos/thejays0015-thumb.jpg" class="w3-image w3-image-abg-1 w3-round" alt="xxxx"> 
+ <img src="photos/andybgoode0020-thumb.jpg" class="w3-image w3-image-abg-2 w3-round" alt="xxxx"> 
+ <img src="photos/andybgoode0038-thumb.jpg" class="w3-image w3-image-abg-3 w3-round" alt="xxxx"> 
  <img src="photos/andybgoode0014-thumb.jpg" class="w3-image w3-image-abg-4 w3-round" alt="xxxx"> 
  <img src="photos/andybgoode0039-thumb.jpg" class="w3-image w3-image-abg-5 w3-round" alt="xxxx"> 
- <img src="photos/andybgoode0010-thumb.jpg" class="w3-image w3-image-abg-6 w3-round" alt="xxxx"> 
+ <img src="photos/andybgoode0007-thumb.jpg" class="w3-image w3-image-abg-6 w3-round" alt="xxxx">
+ <img src="photos/andybgoode0024-thumb.jpg" class="w3-image w3-image-abg-7 w3-round" alt="xxxx"> 
 </div>
 </div>
 
@@ -278,12 +280,13 @@ Some are solo gigs ('ABG') and others with <a href="http://www.TheJaysVintage.co
 
 <div class="w3-container w3-black w3-border-bottom w3-border-black">
 <div class="w3-cell-row">
- <img src="photos/andybgoode0004-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="1950s/60s Rock and Roll Entertainer"> 
- <img src="photos/thejays0014-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="1960s Rat Pack, Swing Singer"> 
- <img src="photos/thejays0004-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="1940s and Wartime Vocalist"> 
+ <img src="photos/andybgoode0004-thumb.jpg" class="w3-image w3-image-abg-1 w3-round" alt="1950s/60s Rock and Roll Entertainer"> 
+ <img src="photos/thejays0014-thumb.jpg" class="w3-image w3-image-abg-2 w3-round" alt="1960s Rat Pack, Swing Singer"> 
+ <img src="photos/thejays0004-thumb.jpg" class="w3-image w3-image-abg-3 w3-round" alt="1940s and Wartime Vocalist"> 
  <img src="photos/andybgoode0041-thumb.jpg" class="w3-image w3-image-abg-4 w3-round" alt="xxxx"> 
  <img src="photos/andybgoode0008-thumb.jpg" class="w3-image w3-image-abg-5 w3-round" alt="xxxx"> 
- <img src="photos/andybgoode0016-thumb.jpg" class="w3-image w3-image-abg-6 w3-round" alt="xxxx">  
+ <img src="photos/andybgoode0016-thumb.jpg" class="w3-image w3-image-abg-6 w3-round" alt="xxxx">
+ <img src="photos/thejays0024-thumb.jpg" class="w3-image w3-image-abg-7 w3-round" alt="xxxx">  
 </div>
 </div>
 
@@ -303,7 +306,7 @@ Some are solo gigs ('ABG') and others with <a href="http://www.TheJaysVintage.co
 <div id="contact" class="w3-row-padding">
   <div class="w3-third w3-black">
     <img src="photos/andybgoode0004-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="1950s/60s Rock and Roll Entertainer">
-	<h1>Contact Me</h1>
+	<h2>Contact Me</h2>
 <ul id="contactList">
 <li id="liPhone">Phone: 07415 338859</li>
 <li id="liEmail">email: <a href="mailto:Andy@AndyBGoode.com?Subject=Hi%20Andy" target="_top">Andy@AndyBGoode.com</a></li>
