--- a/index2.html
+++ b/index2.html
@@ -306,22 +306,8 @@ Some are solo gigs ('ABG') and others with <a href="http://www.TheJaysVintage.co
 
 
 
-<div id="contact" class="w3-row-padding">
-  <div class="w3-third w3-black">
-    <img src="photos/andybgoode0004-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="1950s/60s Rock and Roll Entertainer">
-	<h2>Contact Me</h2>
-<ul id="contactList">
-<li id="liPhone">Phone: 07415 338859</li>
-<li id="liEmail">email: <a href="mailto:Andy@AndyBGoode.com?Subject=Hi%20Andy" target="_top">Andy@AndyBGoode.com</a></li>
-<li id="liFacebook">Facebook: <a href="https://www.facebook.com/AndyBGoode">AndyBGoode</a></li>
-<li id="liInstagram">Instagram: <a href="https://www.instagram.com/andybgoodevocalist">andybgoodevocalist</a></li>
-<li id="liYouTube">YouTube: <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">Andy B Goode</a></li>
-<li id="liTwitter">Twitter: <a href="http://www.twitter.com/AndyBGoode">@AndyBGoode</a></li>
-<!--<li id='liJays'>The Jays Vintage: <a href='http://www.TheJaysVintage.com'>The Jays Vintage</a></li>-->
-<li id="liWebsite">Version: v2.5.0</li>
-</ul>
-  </div>
-
+<div class="w3-row-padding">
+  <h1>Contacts</h1> 
   <div class="w3-third w3-black"> <!-- w3-grey -->
     <img src="photos/thejays0014-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="1950s/60s Rock and Roll Entertainer">
     <h2>The Jays Vintage</h2>
@@ -336,6 +322,21 @@ Some are solo gigs ('ABG') and others with <a href="http://www.TheJaysVintage.co
     <p>Acoustic Singer Songwriter</p>
     <p>Having shared a stage with Jude, I can whole heartly recommend this talented chap. He performs hits from the 1970s to the modern day, along with some of his own songs. Looping is his speciality.</p>
     <p><a href='http://www.JudeBritton.com'>Jude Britton's Website</a></p>
+  </div>
+  
+  <div id="contact" class="w3-third w3-black">
+    <img src="photos/andybgoode0004-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="1950s/60s Rock and Roll Entertainer">
+	<h2>Contact Me</h2>
+<ul id="contactList">
+<li id="liPhone">Phone: 07415 338859</li>
+<li id="liEmail">email: <a href="mailto:Andy@AndyBGoode.com?Subject=Hi%20Andy" target="_top">Andy@AndyBGoode.com</a></li>
+<li id="liFacebook">Facebook: <a href="https://www.facebook.com/AndyBGoode">AndyBGoode</a></li>
+<li id="liInstagram">Instagram: <a href="https://www.instagram.com/andybgoodevocalist">andybgoodevocalist</a></li>
+<li id="liYouTube">YouTube: <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">Andy B Goode</a></li>
+<li id="liTwitter">Twitter: <a href="http://www.twitter.com/AndyBGoode">@AndyBGoode</a></li>
+<!--<li id='liJays'>The Jays Vintage: <a href='http://www.TheJaysVintage.com'>The Jays Vintage</a></li>-->
+<li id="liWebsite">Version: v2.5.0</li>
+</ul>
   </div>
 </div>
 
