--- a/index2.html
+++ b/index2.html
@@ -123,9 +123,7 @@ function screenResize() {
 
 <!--<div class="w3-container w3-black w3-border-bottom w3-border-black">-->
 <div class="w3-cell-row">
- <img src="photos/andybgoode0034.jpg" class="w3-image w3-image-abg-x w3-round" alt="1950s/60s Rock and Roll Entertainer"> 
- <img src="photos/andybgoode0035.jpg" class="w3-image w3-image-abg-x w3-round" alt="1960s Rat Pack, Swing Singer"> 
- <img src="photos/andybgoode0036.jpg" class="w3-image w3-image-abg-x w3-round" alt="1940s and Wartime Vocalist"> 
+<img src="photos/andybgoode0034.jpg" class="w3-image w3-image-abg-x w3-round" alt="1950s/60s Rock and Roll Entertainer"><img src="photos/andybgoode0035.jpg" class="w3-image w3-image-abg-x w3-round" alt="1960s Rat Pack, Swing Singer"><img src="photos/andybgoode0036.jpg" class="w3-image w3-image-abg-x w3-round" alt="1940s and Wartime Vocalist">
 </div>
 <!--</div>-->
 
@@ -185,13 +183,7 @@ function screenResize() {
 
 <div class="w3-container w3-black w3-border-bottom w3-border-black">
 <div class="w3-cell-row">
- <img src="photos/thejays0010-thumb.jpg" class="w3-image w3-image-abg-1 w3-round" alt="xxxx"> 
- <img src="photos/andybgoode0037-thumb.jpg" class="w3-image w3-image-abg-2 w3-round" alt="xxxx"> 
- <img src="photos/thejays0016-thumb.jpg" class="w3-image w3-image-abg-3 w3-round" alt="xxxx"> 
- <img src="photos/andybgoode0004-thumb.jpg" class="w3-image w3-image-abg-4 w3-round" alt="xxxx"> 
- <img src="photos/andybgoode0040-thumb.jpg" class="w3-image w3-image-abg-5 w3-round" alt="xxxx"> 
- <img src="photos/andybgoode0019-thumb.jpg" class="w3-image w3-image-abg-6 w3-round" alt="xxxx"> 
- <img src="photos/andybgoode0010-thumb.jpg" class="w3-image w3-image-abg-7 w3-round" alt="xxxx"> 
+<img src="photos/thejays0010-thumb.jpg" class="w3-image w3-image-abg-1 w3-round" alt="xxxx"><img src="photos/andybgoode0037-thumb.jpg" class="w3-image w3-image-abg-2 w3-round" alt="xxxx"><img src="photos/thejays0016-thumb.jpg" class="w3-image w3-image-abg-3 w3-round" alt="xxxx"><img src="photos/andybgoode0004-thumb.jpg" class="w3-image w3-image-abg-4 w3-round" alt="xxxx"><img src="photos/andybgoode0040-thumb.jpg" class="w3-image w3-image-abg-5 w3-round" alt="xxxx"><img src="photos/andybgoode0019-thumb.jpg" class="w3-image w3-image-abg-6 w3-round" alt="xxxx"><img src="photos/andybgoode0010-thumb.jpg" class="w3-image w3-image-abg-7 w3-round" alt="xxxx"><img src="photos/andybgoode0021-thumb.jpg" class="w3-image w3-image-abg-8 w3-round" alt="xxxx"><img src="photos/andybgoode0012-thumb.jpg" class="w3-image w3-image-abg-9 w3-round" alt="xxxx"> 
 </div>
 </div>
 
@@ -245,13 +237,7 @@ Perfect for: 1940s Events, Vintage Fairs, Town Centre, Bandstands, Christmas Eve
 
 <div class="w3-container w3-black w3-border-bottom w3-border-black">
 <div class="w3-cell-row">
- <img src="photos/thejays0015-thumb.jpg" class="w3-image w3-image-abg-1 w3-round" alt="xxxx"> 
- <img src="photos/andybgoode0020-thumb.jpg" class="w3-image w3-image-abg-2 w3-round" alt="xxxx"> 
- <img src="photos/andybgoode0038-thumb.jpg" class="w3-image w3-image-abg-3 w3-round" alt="xxxx"> 
- <img src="photos/andybgoode0014-thumb.jpg" class="w3-image w3-image-abg-4 w3-round" alt="xxxx"> 
- <img src="photos/andybgoode0039-thumb.jpg" class="w3-image w3-image-abg-5 w3-round" alt="xxxx"> 
- <img src="photos/andybgoode0007-thumb.jpg" class="w3-image w3-image-abg-6 w3-round" alt="xxxx">
- <img src="photos/andybgoode0024-thumb.jpg" class="w3-image w3-image-abg-7 w3-round" alt="xxxx"> 
+<img src="photos/thejays0015-thumb.jpg" class="w3-image w3-image-abg-1 w3-round" alt="xxxx"><img src="photos/andybgoode0020-thumb.jpg" class="w3-image w3-image-abg-2 w3-round" alt="xxxx"><img src="photos/andybgoode0038-thumb.jpg" class="w3-image w3-image-abg-3 w3-round" alt="xxxx"><img src="photos/andybgoode0014-thumb.jpg" class="w3-image w3-image-abg-4 w3-round" alt="xxxx"><img src="photos/andybgoode0039-thumb.jpg" class="w3-image w3-image-abg-5 w3-round" alt="xxxx"><img src="photos/andybgoode0007-thumb.jpg" class="w3-image w3-image-abg-6 w3-round" alt="xxxx"><img src="photos/andybgoode0024-thumb.jpg" class="w3-image w3-image-abg-7 w3-round" alt="xxxx"><img src="photos/andybgoode0006-thumb.jpg" class="w3-image w3-image-abg-8 w3-round" alt="xxxx"><img src="photos/andybgoode0028-thumb.jpg" class="w3-image w3-image-abg-9 w3-round" alt="xxxx">  
 </div>
 </div>
 
@@ -283,13 +269,7 @@ Some are solo gigs ('ABG') and others with <a href="http://www.TheJaysVintage.co
 
 <div class="w3-container w3-black w3-border-bottom w3-border-black">
 <div class="w3-cell-row">
- <img src="photos/andybgoode0004-thumb.jpg" class="w3-image w3-image-abg-1 w3-round" alt="1950s/60s Rock and Roll Entertainer"> 
- <img src="photos/thejays0014-thumb.jpg" class="w3-image w3-image-abg-2 w3-round" alt="1960s Rat Pack, Swing Singer"> 
- <img src="photos/thejays0004-thumb.jpg" class="w3-image w3-image-abg-3 w3-round" alt="1940s and Wartime Vocalist"> 
- <img src="photos/andybgoode0041-thumb.jpg" class="w3-image w3-image-abg-4 w3-round" alt="xxxx"> 
- <img src="photos/andybgoode0008-thumb.jpg" class="w3-image w3-image-abg-5 w3-round" alt="xxxx"> 
- <img src="photos/andybgoode0016-thumb.jpg" class="w3-image w3-image-abg-6 w3-round" alt="xxxx">
- <img src="photos/thejays0024-thumb.jpg" class="w3-image w3-image-abg-7 w3-round" alt="xxxx">  
+<img src="photos/andybgoode0004-thumb.jpg" class="w3-image w3-image-abg-1 w3-round" alt="1950s/60s Rock and Roll Entertainer"><img src="photos/thejays0014-thumb.jpg" class="w3-image w3-image-abg-2 w3-round" alt="1960s Rat Pack, Swing Singer"><img src="photos/thejays0004-thumb.jpg" class="w3-image w3-image-abg-3 w3-round" alt="1940s and Wartime Vocalist"><img src="photos/andybgoode0041-thumb.jpg" class="w3-image w3-image-abg-4 w3-round" alt="xxxx"><img src="photos/andybgoode0008-thumb.jpg" class="w3-image w3-image-abg-5 w3-round" alt="xxxx"><img src="photos/thejays0024-thumb.jpg" class="w3-image w3-image-abg-6 w3-round" alt="xxxx"><img src="photos/andybgoode0016-thumb.jpg" class="w3-image w3-image-abg-7 w3-round" alt="xxxx"><img src="photos/andybgoode0022-thumb.jpg" class="w3-image w3-image-abg-8 w3-round" alt="xxxx"><img src="photos/thejays0003-thumb.jpg" class="w3-image w3-image-abg-9 w3-round" alt="xxxx">
 </div>
 </div>
 
